--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         
         <div id="boys-list" class="list-container hidden-list">
             <div class="bg-green-900/50 border border-green-500 p-6 rounded-lg">
-                <h3 class="text-2xl font-bold text-green-300 mb-4">Döyüşçü Siyahısı</h3>
+                <h3 class="text-2xl font-bold text-green-300 mb-4">Oğlan Siyahısı</h3>
                 <ul class="space-y-2 text-lg text-green-200">
                     <li>Səid</li>
                     <li>Kamran</li>
@@ -77,7 +77,7 @@
 
         <div id="rivals-list" class="list-container hidden-list">
             <div class="bg-red-900/50 border border-red-500 p-6 rounded-lg">
-                <h3 class="text-2xl font-bold text-red-300 mb-4">Rəqib Siyahısı</h3>
+                <h3 class="text-2xl font-bold text-red-300 mb-4">Peysər Siyahısı</h3>
                 <ul class="space-y-2 text-lg text-red-200">
                     <li>Fəxri (Fucukru)</li>
                     <li>Faiq (Balina)</li>
